--- a/style.css
+++ b/style.css
@@ -24,13 +24,13 @@
 	}
   }
 
-#vg-tooltip-element table{
+/* #vg-tooltip-element table{
     width: 350px;
 }
 
 .vg-tooltip visible light-theme{
     width: 540px;
-}
+} */
 
 .low{
     margin-top: 1%;
